--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <input id="authBtn" type="button" value="Авторизация" />
-     
+    <div ng-view>
+    </div>
     <script src="./vendors/dojo-release-1.9.0-src/dojo/dojo.js" type="text/javascript"></script>
+    <script src="./vendors/angular-1.0.7/angular.js" type="text/javascript"></script>
     <script src="./index.js" type="text/javascript"></script>
 </body>
 </html>
